--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "@waves/ts-lib-crypto": "^1.4.4-beta.1",
     "axios": "^0.21.1",
     "chromedriver": "^91.0.1",
     "dotenv": "^7.0.0",
