--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "mongoose": "^5.13.7",
     "node-cron": "^3.0.0",
     "node-telegram-bot-api": "^0.53.0",
+    "pg": "^8.7.1",
     "selenium-webdriver": "^4.0.0-beta.4",
+    "sequelize": "^6.7.0",
     "twit": "^2.2.11"
   },
   "devDependencies": {
